--- a/SucosVendas/Sucos Vendas/Sucos Vendas.csproj
+++ b/SucosVendas/Sucos Vendas/Sucos Vendas.csproj
@@ -93,6 +93,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\Frm_Teste.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\Frm_Teste.Designer.cs">
+      <DependentUpon>Frm_Teste.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="View\Frm_CadastroCliente_UC.resx">
       <DependentUpon>Frm_CadastroCliente_UC.cs</DependentUpon>
     </EmbeddedResource>
@@ -115,6 +121,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="View\Frm_Teste.resx">
+      <DependentUpon>Frm_Teste.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -131,6 +140,7 @@
   <ItemGroup />
   <ItemGroup>
     <Content Include="icons8-juices-100.ico" />
+    <Content Include="Imagens\3409297.jpg" />
     <Content Include="Imagens\Cadastros.png" />
     <Content Include="Imagens\fecharsenha.png" />
     <Content Include="Imagens\icons8-credenciais-do-usuário-94.ico" />
